# Feature-to-Production-Autonomous-Flow

./: .gitlab-ci.yml  README.md  presentation.html  pyproject.toml
contracts/: README.md  action-plan.schema.json  risk-assessment.schema.json  semantic-analysis.schema.json
docs/: gitlab-pipeline.md
fixtures/: action-plan-sample.json  risk-sample.json  semantic-sample.json
fixtures/diffs/: high_auth.diff  low_cosmetic.diff  medium_payment.diff  sample_auth.diff
scripts/: enforce_policy.py  semantic_from_diff.py
src/: __init__.py  contracts.py
src/actions/: __init__.py
src/architecture_drift/: __init__.py
src/deployment_predictor/: __init__.py
src/risk_engine/: README.md  __init__.py  cli.py  engine.py
src/security_regression/: __init__.py
src/semantic_diff/: __init__.py
tests/: __init__.py  test_diff_first_flow.py  test_edge_cases.py  test_engine.py
